# job_hunter

./: .env.example  .gitignore  LICENSE  README.md  linkedin_debug.html  profile.example.yaml  profile.yaml  pyproject.toml  requirements.txt  run_job_hunter.sh
.indeed_profile/: Local State
.indeed_profile/Default/: BrowsingTopicsState  Cookies  DIPS  Favicons  History  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Top Sites  TransportSecurity  Web Data
.indeed_profile/Default/DawnGraphiteCache/: data_1  index
.indeed_profile/Default/DawnWebGPUCache/: data_1  index
.indeed_profile/Default/Extension Rules/: LOG
.indeed_profile/Default/Extension Scripts/: LOG
.indeed_profile/Default/Extension State/: LOG  LOG.old
.indeed_profile/Default/GCM Store/: LOG  LOG.old
.indeed_profile/Default/GPUCache/: data_0  data_1  data_2  index
.indeed_profile/Default/Session Storage/: LOG  LOG.old
.indeed_profile/Default/Sessions/: Session_13399571807825575  Session_13399572160968198  Tabs_13399571808181890  Tabs_13399572161265568
.indeed_profile/Default/Site Characteristics Database/: LOG  (+1 more)
.indeed_profile/GrShaderCache/: data_0  data_1  index
.indeed_profile/GraphiteDawnCache/: data_1  index
.indeed_profile/ShaderCache/: data_1  index
.indeed_profile/segmentation_platform/: ukm_db
src/: db.py  linkedin_save_state.py  main.py  notify.py  report.py  run_batch.py
src/sources/: __init__.py  adzuna.py  indeed_pw.py  indeed_refresh_state.py  linkedin.py  linkedin_debug.html  remotive.py  storage_state.json  test_linkedin.py
(+54 files in other folders)
